Minor UI changes.

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -135,7 +135,7 @@
 <div th:fragment="sidebar" class="sidebar" style="width: 250px;">
     <div class="text-center mb-4">
         <h4 class="mb-0">Admin Portal</h4>
-        <small class="text-muted">Healthcare Management System</small>
+        <small class="text-muted">Patient Appointment Management System</small>
     </div>
     <ul class="nav flex-column">
         <li class="nav-item">
@@ -158,11 +158,11 @@
                 <i class="fas fa-user-shield"></i> Admins
             </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">
-                <i class="fas fa-cog"></i> Settings
-            </a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link" href="#">-->
+<!--                <i class="fas fa-cog"></i> Settings-->
+<!--            </a>-->
+<!--        </li>-->
         <li class="nav-item">
             <a class="nav-link" th:href="@{/logout}">
                 <i class="fas fa-sign-out-alt"></i> Logout
