--- a/src/main/resources/templates/admin-register.html
+++ b/src/main/resources/templates/admin-register.html
@@ -255,13 +255,9 @@
 
                         <div class="footer-links mt-4">
                             <p>
-                                Already have an account?
-                                <a th:href="@{/login}">Sign in</a>
-                            </p>
-                            <p>
-                                <a th:href="@{/}">Return to homepage</a> |
-                                <a th:href="@{/register/patient}">Patient Registration</a> |
-                                <a th:href="@{/register/doctor}">Doctor Registration</a>
+                                <a th:href="@{/admin/dashboard}">Return to dashboard</a> |
+                                <a th:href="@{/register/patient}">Add Patient</a> |
+                                <a th:href="@{/register/doctor}">Add Doctor</a>
                             </p>
                         </div>
                     </form>
