--- a/src/main/resources/templates/doctor-register.html
+++ b/src/main/resources/templates/doctor-register.html
@@ -280,15 +280,12 @@
 
                         <div class="d-grid">
                             <button type="submit" class="btn btn-primary btn-lg">
-                                <i class="fas fa-user-plus me-2"></i> Register as Doctor
+                                <i class="fas fa-user-plus me-2"></i> Add Doctor
                             </button>
                         </div>
 
                         <div class="footer-text">
-                            <p class="mt-3">
-                                Already have an account?
-                                <a th:href="@{/login}" class="text-decoration-none">Login here</a>
-                            </p>
+                                <a th:href="@{/admin/dashboard}" class="text-decoration-none">Return to Dashboard</a>
                         </div>
                     </form>
                 </div>
