--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,10 +37,8 @@
     <button type="submit">Login</button>
 </form>
 
-<p>Don't have an account?
-    <a th:href="@{/register/patient}">Register as Patient</a> |
-    <a th:href="@{/register/doctor}">Register as Doctor</a> |
-    <a th:href="@{/register/admin}">Register as Admin</a>
+<p>New patient?
+    <a th:href="@{/register/patient}">Register here</a>
 </p>
 </body>
 </html>
