--- a/src/main/resources/templates/patient-appointment-history.html
+++ b/src/main/resources/templates/patient-appointment-history.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
-<div th:replace="~{fragments/navbar :: navbar}"></div>
+<!-- <div th:replace="~{fragments/navbar :: navbar}"></div> -->
 
 <div class="container py-4">
     <!-- Success Message -->
@@ -53,7 +53,7 @@
                                         <span th:case="'CANCELLED'" class="badge bg-secondary">Cancelled</span>
                                     </span>
                         </td>
-                        <td>
+                        <!-- <td>
                             <div class="btn-group" role="group">
                                 <a th:href="@{'/patient/cancel-appointment/' + ${appointment.id}}"
                                    th:if="${appointment.status.name() == 'BOOKED'}"
@@ -61,7 +61,7 @@
                                     <i class="bi bi-x-circle"></i> Cancel
                                 </a>
                             </div>
-                        </td>
+                        </td> -->
                     </tr>
                     </tbody>
                 </table>
