--- a/src/main/resources/templates/patient-book-appointment.html
+++ b/src/main/resources/templates/patient-book-appointment.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div th:replace="~{fragments/navbar :: navbar}"></div>
+<!-- <div th:replace="~{fragments/navbar :: navbar}"></div> -->
 
 <div class="container mt-4">
     <h2>Book Appointment</h2>
@@ -17,7 +17,7 @@
             </span>
     </div>
 
-    <form th:action="@{/patient/book-appointment}" th:object="${appointment}" method="post">
+    <form th:action="@{/patient/book/appointment}" th:object="${appointment}" method="post">
         <div class="mb-3">
             <label for="doctor" class="form-label">Doctor</label>
             <select class="form-select" id="doctor" th:field="*{doctor}">
